err/motivator.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/motivator'...
Compiling './lib/python3.5/site-packages/motivator/__init__.py'...
***   File "./lib/python3.5/site-packages/motivator/__init__.py", line 59
    print datetime.now()
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/motivator-1.0a4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyttsx'...
Compiling './lib/python3.5/site-packages/pyttsx/driver.py'...
***   File "./lib/python3.5/site-packages/pyttsx/driver.py", line 105
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyttsx/drivers'...
Compiling './lib/python3.5/site-packages/pyttsx/drivers/_espeak.py'...
***   File "./lib/python3.5/site-packages/pyttsx/drivers/_espeak.py", line 442
    print numsample,
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyttsx/drivers/espeak.py'...
***   File "./lib/python3.5/site-packages/pyttsx/drivers/espeak.py", line 88
    except ctypes.ArgumentError, e:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyttsx/drivers/sapi5.py'...
***   File "./lib/python3.5/site-packages/pyttsx/drivers/sapi5.py", line 106
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyttsx/engine.py'...
***   File "./lib/python3.5/site-packages/pyttsx/engine.py", line 64
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyttsx-1.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
